--- a/ConsultorioOdontologicoEE-war/web/restrito/viewImages.xhtml
+++ b/ConsultorioOdontologicoEE-war/web/restrito/viewImages.xhtml
@@ -17,12 +17,65 @@
         <h:outputScript library="js" name="jquery.blueimp-gallery.min.js" target="head"/>
         <h:outputScript library="js" name="jquery.image-gallery.js" target="head"/>
         <h:outputScript library="js" name="startgallery.js" target="head"/>
-    </ui:define>
-
-    <ui:define name="content">
         <h:outputStylesheet name="./css/jquery-ui.css"/>
         <h:outputStylesheet name="./css/blueimp-gallery.min.css"/>
         <h:outputStylesheet name="./css/demo.css"/>
+    </ui:define>
+
+    <ui:define name="content">
+        <form>
+            <button type="button" id="slideshow-button">Slideshow</button>
+            <select id="effect-switcher">
+                <option>blind</option>
+                <option>clip</option>
+                <option>drop</option>
+                <option selected>fade</option>
+                <option>fold</option>
+                <option>puff</option>
+                <option>slide</option>
+                <option>scale</option>
+            </select>
+            <select id="theme-switcher">
+                <option value="base">Base</option>
+                <option value="black-tie">Black Tie</option>
+                <option value="blitzer">Blitzer</option>
+                <option value="cupertino">Cupertino</option>
+                <option value="dark-hive">Dark Hive</option>
+                <option value="dot-luv">Dot Luv</option>
+                <option value="eggplant">Eggplant</option>
+                <option value="excite-bike">Excite Bike</option>
+                <option value="flick">Flick</option>
+                <option value="hot-sneaks">Hot sneaks</option>
+                <option value="humanity">Humanity</option>
+                <option value="le-frog">Le Frog</option>
+                <option value="mint-choc">Mint Choc</option>
+                <option value="overcast">Overcast</option>
+                <option value="pepper-grinder">Pepper Grinder</option>
+                <option value="redmond">Redmond</option>
+                <option value="smoothness">Smoothness</option>
+                <option value="south-street" selected>South Street</option>
+                <option value="start">Start</option>
+                <option value="sunny">Sunny</option>
+                <option value="swanky-purse">Swanky Purse</option>
+                <option value="trontastic">Trontastic</option>
+                <option value="ui-darkness">UI Darkness</option>
+                <option value="ui-lightness">UI Lightness</option>
+                <option value="vader">Vader</option>
+            </select>
+        </form>
+        <br>
+            <!-- The container for the list of example images -->
+            <div id="links"></div>
+            <!-- The dialog widget -->
+            <div id="blueimp-gallery-dialog" data-show="fade" data-hide="fade">
+                <!-- The Gallery widget  -->
+                <div class="blueimp-gallery blueimp-gallery-carousel blueimp-gallery-controls">
+                    <div class="slides"></div>
+                    <a class="prev">‹</a>
+                    <a class="next">›</a>
+                    <a class="play-pause"></a>
+                </div>
+            </div>
     </ui:define>
 
 
