--- a/ConsultorioOdontologicoEE-war/web/restrito/viewImages.xhtml
+++ b/ConsultorioOdontologicoEE-war/web/restrito/viewImages.xhtml
@@ -29,7 +29,7 @@
                 <option>blind</option>
                 <option>clip</option>
                 <option>drop</option>
-                <option selected>fade</option>
+                <option selected="true">fade</option>
                 <option>fold</option>
                 <option>puff</option>
                 <option>slide</option>
@@ -53,7 +53,7 @@
                 <option value="pepper-grinder">Pepper Grinder</option>
                 <option value="redmond">Redmond</option>
                 <option value="smoothness">Smoothness</option>
-                <option value="south-street" selected>South Street</option>
+                <option value="south-street" selected="true">South Street</option>
                 <option value="start">Start</option>
                 <option value="sunny">Sunny</option>
                 <option value="swanky-purse">Swanky Purse</option>
@@ -63,8 +63,8 @@
                 <option value="vader">Vader</option>
             </select>
         </form>
-        <br>
-            <!-- The container for the list of example images -->
+        <br />
+        <!-- The container for the list of example images -->
             <div id="links"></div>
             <!-- The dialog widget -->
             <div id="blueimp-gallery-dialog" data-show="fade" data-hide="fade">
