--- a/ConsultorioOdontologicoEE-war/web/restrito/orcamentos.xhtml
+++ b/ConsultorioOdontologicoEE-war/web/restrito/orcamentos.xhtml
@@ -82,9 +82,9 @@
                         target="#{orcamentoControl.selectedOrcamento}"
                         title="Alterar Orçamento"/>
                      <odonto:botaoAcaoTabela 
-                        action="#{orcamentoControl.doViewImages()}"
+                        action="#{imageControl.doViewImages()}"
                         icon="Images_32.png"
-                        target="#{orcamentoControl.selectedOrcamento}"
+                        target="#{imageControl.selectedOrcamento}"
                         title="Ver Imagens"                        
                         />  
                     <odonto:botaoAcaoTabela 
